# napari-sldy

./: README.md  setup.cfg  tox.ini
src/napari_sldy/: _reader.py
src/napari_sldy/_tests/: test_reader.py
tests/: test_reader.py
