[metadata]
name = napari-sldy
version = 0.0.1
author = Adam Tyson
author_email = code@adamltyson.com
url = https://github.com/instituteofcancerresearch/napari-sldy
license = MIT
description = Load slidebook .sldy files into napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/instituteofcancerresearch/napari-sldy/issues
    Documentation = https://github.com/instituteofcancerresearch/napari-sldy#README.md
    Source Code = https://github.com/instituteofcancerresearch/napari-sldy
    User Support = https://github.com/instituteofcancerresearch/napari-sldy/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-sldy = napari_sldy
